# qalaam-hacs

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .lintstagedrc.cjs  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-PROPRIETARY  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  commitlint.config.mjs  docker-compose.dev.yml  eslint.config.js  hacs.json  info.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.changeset/: README.md  config.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-approve.yml  release.yml
.husky/: commit-msg  pre-commit
Docs/: DEV_CHECKLIST.md  INTRO.md  STRATEGY_AND_ROADMAP.md  context.md  quickstart_implementation_guide.md  quranic_recitation_ai_research_roadmap.md  technical_decision_framework.md
Docs/adrs/: ADR-0001-monorepo.md  ADR-0002-qul-canonical-data.md  ADR-0003-multi-protocol-adapters.md  ADR-0004-fsrs6-scheduler.md  ADR-0005-on-device-asr.md  ADR-0006-habibi-tts-checkpoint.md  ADR-0007-qalaam-house-voice.md  ADR-0008-schema-source-of-truth.md  ADR-0009-backend-language.md  ADR-0010-storage-architecture.md  ADR-0011-licensing.md  ADR-0012-auth.md  ADR-0013-mobile-stack.md  ADR-0014-tts-mvp-vs-selfhost.md  ADR-0015-sidecar-transport.md  ADR-0016-data-flywheel-architecture.md  ADR-0017-i18n-strategy.md  ADR-0018-cache-invalidation.md  ADR-0019-tts-scope-app-voice-only.md  ADR-0020-qul-deep-ingestion.md  ADR-0023-production-stack-sqlite-only.md  ADR-0024-licensing-and-moat-protection.md  ADR-0025-cross-device-playback-sync.md  ADR-template.md  README.md
Docs/architecture/: c4-containers.md  c4-containers.puml  c4-context.md  c4-context.puml  qalaam-c4-containers.png.sha256  qalaam-c4-context.png.sha256
Docs/onboarding/: new-engineer.md
Docs/patterns/: feature-gates.md
Docs/research/: qul-inventory.md
Docs/runbooks/: README.md  asr-battery-drain.md  codegen-drift.md  data-fetch-failure.md  ha-integration-not-discovered.md  ha-local-testing.md  hassfest-local-validation.md  qf-rate-limited.md  tts-provider-failover.md
apps/backend/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/ha-panel/: README.md  package.json  tsconfig.json  vite.config.ts
apps/mobile/: README.md  app.json  package.json  tsconfig.json
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
custom_components/nahaj/: __init__.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  intents.py  manifest.json  media_player.py  media_source.py  number.py  panel.py  playback_bridge.py  select.py  sensor.py  services.py  services.yaml  todo.py
custom_components/qalaam/: __init__.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  intents.py  manifest.json  media_player.py  media_source.py  number.py  panel.py  select.py  sensor.py  services.yaml  strings.json
data/: .gitignore  README.md
data/qul-source/: qpc-v4-fonts.sha256
infrastructure/: DEPLOY-PLAN.md  README.md
infrastructure/docker/: .env.example  docker-compose.yml
infrastructure/scripts/: seed-host-data.sh
integrations/homeassistant/: README.md  info.md
ml/: README.md  pyproject.toml
ml/datasets/: download_everyayah.py
ml/eval/: voice_similarity.py  wer_per_reciter.py
ml/training/: finetune_habibi.py  finetune_whisper_quran.py
scripts/data/: _lib.sh  _qul-export-split.py  _qul-export.sql  bootstrap-qul-from-dump.sh  build-search-index.py  compute-qul-sha.sh  download-qpc-v4-fonts.sh  download-qul.sh  download-quran-align.sh  download-quran-tajweed.sh  fix-recitations-verse-keys.py  fix-sajda-metadata.py  generate-qpc-v4-fontface-css.sh  ingest-all-missing.py  ingest-image-mushaf-overlays.py  ingest-morphology.py  ingest-qpc-v4-text.py  ingest-qul-base.ts  ingest-qul-extras.py  ingest-qul-from-scrape.ts  ingest-qul-layouts.ts  ingest-qul-metadata.ts  ingest-qul-mutashabihat-v2.ts  ingest-qul-recitations.ts  ingest-qul-verses.ts  ingest-qul-wbw-colored-en.py  ingest-qul-wbw.ts  ingest-reciters-deep.py  ingest-tafsirs-deep.py  ingest-tafsirs.py  ingest-tajweed.py  ingest-topics.py  ingest-translations-deep.py  ingest-translations.py  ingest-transliterations.py  license-auto-tag.py  migrate-layouts-to-canonical.py  scrape-qul-full.py  scrape-qul.sh  strip-arabic-font-gsub.py
scripts/docs/: render-c4-png.sh
services/asr-worker/: Dockerfile  README.md  pyproject.toml
services/asr-worker/src/qalaam_asr_worker/: __init__.py  aligner.py  models.py  server.py  transcriber.py
services/asr-worker/tests/: test_aligner.py  test_server.py  test_transcriber.py
services/device-bridge/: Dockerfile  README.md  pyproject.toml
services/device-bridge/src/qalaam_device_bridge/: __init__.py  models.py  server.py
services/device-bridge/src/qalaam_device_bridge/providers/: __init__.py  airplay.py  cast.py
services/device-bridge/tests/: test_announce_lifecycle.py  test_models.py
services/prosody-worker/: Dockerfile  README.md  pyproject.toml
services/prosody-worker/src/qalaam_prosody_worker/: __init__.py  server.py
services/prosody-worker/tests/: test_server.py
services/realtime-feedback/: Dockerfile  README.md  pyproject.toml
services/realtime-feedback/src/qalaam_realtime_feedback/: __init__.py  server.py
services/realtime-feedback/tests/: test_server.py
services/tts-worker/: Dockerfile  README.md  pyproject.toml
services/tts-worker/src/qalaam_tts_worker/: __init__.py  cache.py  models.py  quranic_guard.py  server.py  watermark.py
services/tts-worker/src/qalaam_tts_worker/providers/: elevenlabs.py  habibi.py
services/tts-worker/tests/: test_cache.py  test_elevenlabs_provider.py  test_quranic_guard.py  test_server.py  test_watermark.py
tests/: test_intents.py
(+1601 files in other folders)
