[project]
name = "qalaam-ml"
version = "0.0.1"
description = "Qalaam — ML training, datasets, evaluation. Per ADR-0006 (TTS) + ADR-0005 (ASR)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Qalaam Maintainers" }]

# These are heavy; install only when actively training.
dependencies = [
    "datasets>=3.1.0",
    "huggingface-hub>=0.26.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datasets", "training", "eval"]
