[project]
name = "qalaam-device-bridge"
version = "0.0.1"
description = "Qalaam — Python sidecar hosting Cast (pychromecast) + AirPlay 2 (pyatv). Per ADR-0003 + ADR-0009."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [{ name = "Qalaam Maintainers" }]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pychromecast>=14.0.10",
    "pyatv>=0.16.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "qalaam-types",
    "qalaam-core",
]

[tool.uv.sources]
qalaam-types = { workspace = true }
qalaam-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qalaam_device_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
