[project]
name = "qalaam-prosody-worker"
version = "0.0.1"
description = "Qalaam — Python prosody-batch worker. F0 / energy / MFCC / DTW for offline analysis. Per ADR-0009 + strategy §8.5."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [{ name = "Qalaam Maintainers" }]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "numpy>=1.26",
    "qalaam-types",
    "qalaam-core",
]

[tool.uv.sources]
qalaam-types = { workspace = true }
qalaam-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qalaam_prosody_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
