[project]
name = "qalaam-realtime-feedback"
version = "0.0.1"
description = "Qalaam — WebSocket service for live recitation feedback during the verse-pause Hifdh drill. Per strategy §8.7."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [{ name = "Qalaam Maintainers" }]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "websockets>=14.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "qalaam-types",
    "qalaam-core",
]

[tool.uv.sources]
qalaam-types = { workspace = true }
qalaam-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qalaam_realtime_feedback"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
